# lconf

./: .gitmodules  CMakeLists.txt  Configure.h.cmake.in  Configure.h.lconf.in  build.lconf
api/: lconf.doclua
modules/: C.lua  CMake.lua  make.lua
src/: LuaApi.h  Options.c  Options.h  PosixProcess.c  Target.hpp  main.c
test/c_project_test/: build.lconf  test.c
